--- a/index.html
+++ b/index.html
@@ -10,60 +10,78 @@
 </head>
 
 <body>
+    <!--Header==============-->
     <header class="header">
         <div class="header-top">
-                    <nav>
-                        <ul>
-                            <li><a href="">Shop</a></li>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Story</a></li>
-                            <li><a href="">About</a></li>
-                            <li><a href="">Blog</a></li>
-                            <li><a href="">Testimonials</a></li>
-                        </ul>
-                    </nav>
-                    <div class="logo">
-                        <a href="">
-                            <img src="" alt="">
-                        </a>
-                    </div>                    
-                    <div class="personal">
-                        <ul>
-                            <li>
-                                <a href=""><img src="" alt=""></a>
-                            </li>
-                            <li >
-                                <a href=""><img src="" alt=""></a>
-                            </li>
-                            <li>
-                                <a href=""><img src="" alt=""></a>
-                          <span>3</span>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="social">
-                        <ul>
-                            <li>
-                                <a href=""><img src="" alt=""></a>
-                            </li>
-                            <li >
-                                <a href=""><img src="" alt=""></a>
-                            </li>
-                            <li>
-                                <a href=""><img src="" alt=""></a>
-                            </li>
-                        </ul>
-                    </div>
+            <nav>
+                <ul>
+                    <li><a href="">Shop</a></li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Story</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Testimonials</a></li>
+                </ul>
+            </nav>
+            <div class="logo">
+                <a href="">
+                    <img src="" alt="">
+                </a>
+            </div>
+            <div class="personal">
+                <ul>
+                    <li>
+                        <a href=""><img src="" alt=""></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="" alt=""></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="" alt=""></a>
+                        <span>3</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="social">
+                <ul>
+                    <li>
+                        <a href=""><img src="" alt=""></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="" alt=""></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="" alt=""></a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="header-content">
             <button>Shop now</button>
         </div>
     </header>
 
+    <!--Smoothies==============-->
     <section class="smoothies">
         <h2>What are the smoothies?</h2>
+        <div class="text">A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt,<br>
+            ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such<br>
+            as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant milk, nuts,<br>
+            nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
+        </div>
+        <div class="features">
+            <div class="features-item"><img src="" alt=""><span>Plant Based</span></div>
+            <div class="features-item"><img src="" alt=""><span>Vegan</span></div>
+            <div class="features-item"><img src="" alt=""><span>Paleo</span></div>
+            <div class="features-item"><img src="" alt=""><span>Gluten-Free</span></div>
+            <div class="features-item"><img src="" alt=""><span>Corn-Free</span></div>
+            <div class="features-item"><img src="" alt=""><span>Soy-Free</span></div>
+            <div class="features-item"><img src="" alt=""><span>Ayurvedic</span></div>
+            <div class="features-item"><img src="" alt=""><span>Made With Love</span></div> 
+        </div>
     </section>
 
+    <!--About=============-->
     <section class="about">
         <h2>What make Smoothies an awesome drink?</h2>
     </section>
@@ -90,4 +108,3 @@
 </body>
 
 </html>
-
