--- a/index.html
+++ b/index.html
@@ -83,9 +83,26 @@
 
     <!--About=============-->
     <section class="about">
-        <h2>What make Smoothies an awesome drink?</h2>
+        <div class="about-picture">
+            <img src="" alt="">
+        </div>
+        <div class="about-text">
+            <h2>What make Smoothies an <span>awesome drink?</span></h2>
+            <ul>
+                <li><span>Crunchy</span> Puffs Texture</li>
+                <li><span>100 Calories</span> per drink</li>
+                <li>4g Plant Protein</li>
+                <li>Good source of <span>Magnesium & Vitamin B6</span></li>
+                <li><span>No Sugar</span> in our Savory Flavors</li>
+                <li><span>Non-GMO, Vegan & Paleo</span></li>
+                <li><span>Gluten-Free & Grain-Free</span></li>
+                <li><span>Corn-Free & Soy-Free</span></li>
+            </ul>
+            <button>About Organic Smoothie</button>
+        </div> 
     </section>
 
+    <!--Product=============-->
     <section class="product">
         <h2>Our story</h2>
     </section>
