--- a/index.html
+++ b/index.html
@@ -104,9 +104,41 @@
 
     <!--Product=============-->
     <section class="product">
-        <h2>Our story</h2>
+        <div class="product-dark-chocolate">
+            <img src="" alt="">
+            <div>Dark Chocolate Smoothie<br>
+                <span>100 ml</span> 
+            </div>
+            <button>Buy</button>
+        </div>
+
+        <div class="product-vegan-lettuce">
+            <img src="" alt="">
+            <div>Vegan Lettuce Smoothie<br>
+                <span>100 ml</span> 
+            </div>
+            <button>Buy</button>
+        </div>
+
+        <div class="product-lemon-ginger">
+            <img src="" alt="">
+            <div>Lemon Ginger Smoothie<br>
+                <span>100 ml</span> 
+            </div>
+            <button>Buy</button>
+        </div>
+
+        <div class="product-turmeric-garlic">
+            <img src="" alt="">
+            <div>Turmeric Garlic Smoothie<br>
+                <span>100 ml</span> 
+            </div>
+            <button>Buy</button>
+        </div>
+        
     </section>
 
+    <!--Story=============-->
     <section class="story">
         <h2>Our story</h2>
     </section>
