--- a/index.html
+++ b/index.html
@@ -140,9 +140,23 @@
 
     <!--Story=============-->
     <section class="story">
-        <h2>Our story</h2>
+        <div class="story-text">
+            <h2>Our story</h2>
+            <p>
+                As products typically using raw fruits or vegetables,<br>
+                smoothies include dietary fiber (e.g. pulp, skin, and seeds) and<br>
+                so are thicker than fruit juice, often with a consistency similar<br>
+                to a milkshake. 
+            </p>
+            <button>Who we are</button>
+        </div>
+        <div class="story-picture">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
     </section>
 
+    <!--Testimonials=============-->
     <section class="testimonials">
         <h1>Why clients LOVE us?</h1>
     </section>
