--- a/index.html
+++ b/index.html
@@ -158,10 +158,31 @@
 
     <!--Testimonials=============-->
     <section class="testimonials">
-        <h1>Why clients LOVE us?</h1>
+        <h2>Why clients LOVE us?</h2>
+        <div class="testimonials-article">
+            <div class="article-background">
+                <p>Sarah A</p>
+            </div>
+            <div class="article-text">
+                <p>”Smoothie is great. I don't know what else to say. I wil<br> 
+                let my mum know about this, she could really make use<br>  
+                of Smoothie! Smoothie saved my business.”<br> 
+                <span>- from Santa Monica, CA</span></p>
+            </div>
+            <img src="" alt="">
+        </div>
+        <div class="testimonials-picture">
+            <img src="" alt="">
+        </div>
+        <div class="testimonials-navigation">
+            <button><img src="" alt=""></button>
+            <button><img src="" alt=""></button>
+        </div>
     </section>
+
+    <!--Blog=============-->
     <section class="blog">
-        <h1>Our blog</h1>
+        <h2>Our blog</h2>
     </section>
 
     <section class="instagram"></section>
