--- a/index.html
+++ b/index.html
@@ -183,10 +183,24 @@
     <!--Blog=============-->
     <section class="blog">
         <h2>Our blog</h2>
+        <div class="blog-picture">
+            <img src="" alt=""> 
+        </div>
+        <div class="blog-content">
+            <hr>
+            <h3>ASAFOETIDA - THE NEXT TURMERIC?</h3>
+            <span>Jun 16, 2020</span>
+            <p>If the fruit ingredients and the green vegetable<br>
+                ingredients are both juiced ahead of time, the mixed juice<br> 
+                doesn't even have to be blended like a smoothie, i.e. a<br> 
+                green juice or anything... <a href="">Read More</a></p>
+        </div>
     </section>
 
+    <!--Instagram=============-->
     <section class="instagram"></section>
 
+    <!--Footer=============-->
     <footer class="footer"></footer>
 
 </body>
