--- a/index.html
+++ b/index.html
@@ -198,10 +198,39 @@
     </section>
 
     <!--Instagram=============-->
-    <section class="instagram"></section>
+    <section class="instagram">
+        <a href="">
+            <img src="" alt=""> 
+            <span>ashasuperfoods</span>
+        </a>
+        <div class="instagram-picture">
+            <div class="picture-item">
+                <img src="" alt=""> 
+                <img src="" alt=""> 
+            </div>
+            <div class="picture-item">
+                <img src="" alt=""> 
+                <img src="" alt=""> 
+            </div>
+            <div class="picture-item">
+                <img src="" alt=""> 
+                <img src="" alt=""> 
+            </div>
+            <div class="picture-item">
+                <img src="" alt=""> 
+                <img src="" alt=""> 
+            </div>
+            <div class="picture-item">
+                <img src="" alt=""> 
+                <img src="" alt=""> 
+            </div>
+        </div>
+    </section>
 
     <!--Footer=============-->
-    <footer class="footer"></footer>
+    <footer class="footer">
+
+    </footer>
 
 </body>
 
