--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
     <!--Smoothies==============-->
     <section class="smoothies">
         <h2>What are the smoothies?</h2>
-        <div class="text">A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt,<br>
-            ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such<br>
-            as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant milk, nuts,<br>
+        <div class="text">A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products
+            (milk, yogurt,<br>
+            ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients,
+            such<br>
+            as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant
+            milk, nuts,<br>
             nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
         </div>
         <div class="features">
@@ -77,7 +80,7 @@
             <div class="features-item"><img src="" alt=""><span>Corn-Free</span></div>
             <div class="features-item"><img src="" alt=""><span>Soy-Free</span></div>
             <div class="features-item"><img src="" alt=""><span>Ayurvedic</span></div>
-            <div class="features-item"><img src="" alt=""><span>Made With Love</span></div> 
+            <div class="features-item"><img src="" alt=""><span>Made With Love</span></div>
         </div>
     </section>
 
@@ -99,7 +102,7 @@
                 <li><span>Corn-Free & Soy-Free</span></li>
             </ul>
             <button>About Organic Smoothie</button>
-        </div> 
+        </div>
     </section>
 
     <!--Product=============-->
@@ -107,7 +110,7 @@
         <div class="product-dark-chocolate">
             <img src="" alt="">
             <div>Dark Chocolate Smoothie<br>
-                <span>100 ml</span> 
+                <span>100 ml</span>
             </div>
             <button>Buy</button>
         </div>
@@ -115,7 +118,7 @@
         <div class="product-vegan-lettuce">
             <img src="" alt="">
             <div>Vegan Lettuce Smoothie<br>
-                <span>100 ml</span> 
+                <span>100 ml</span>
             </div>
             <button>Buy</button>
         </div>
@@ -123,7 +126,7 @@
         <div class="product-lemon-ginger">
             <img src="" alt="">
             <div>Lemon Ginger Smoothie<br>
-                <span>100 ml</span> 
+                <span>100 ml</span>
             </div>
             <button>Buy</button>
         </div>
@@ -131,11 +134,11 @@
         <div class="product-turmeric-garlic">
             <img src="" alt="">
             <div>Turmeric Garlic Smoothie<br>
-                <span>100 ml</span> 
+                <span>100 ml</span>
             </div>
             <button>Buy</button>
         </div>
-        
+
     </section>
 
     <!--Story=============-->
@@ -146,7 +149,7 @@
                 As products typically using raw fruits or vegetables,<br>
                 smoothies include dietary fiber (e.g. pulp, skin, and seeds) and<br>
                 so are thicker than fruit juice, often with a consistency similar<br>
-                to a milkshake. 
+                to a milkshake.
             </p>
             <button>Who we are</button>
         </div>
@@ -164,10 +167,10 @@
                 <p>Sarah A</p>
             </div>
             <div class="article-text">
-                <p>”Smoothie is great. I don't know what else to say. I wil<br> 
-                let my mum know about this, she could really make use<br>  
-                of Smoothie! Smoothie saved my business.”<br> 
-                <span>- from Santa Monica, CA</span></p>
+                <p>”Smoothie is great. I don't know what else to say. I wil<br>
+                    let my mum know about this, she could really make use<br>
+                    of Smoothie! Smoothie saved my business.”<br>
+                    <span>- from Santa Monica, CA</span></p>
             </div>
             <img src="" alt="">
         </div>
@@ -184,15 +187,15 @@
     <section class="blog">
         <h2>Our blog</h2>
         <div class="blog-picture">
-            <img src="" alt=""> 
+            <img src="" alt="">
         </div>
         <div class="blog-content">
             <hr>
             <h3>ASAFOETIDA - THE NEXT TURMERIC?</h3>
             <span>Jun 16, 2020</span>
             <p>If the fruit ingredients and the green vegetable<br>
-                ingredients are both juiced ahead of time, the mixed juice<br> 
-                doesn't even have to be blended like a smoothie, i.e. a<br> 
+                ingredients are both juiced ahead of time, the mixed juice<br>
+                doesn't even have to be blended like a smoothie, i.e. a<br>
                 green juice or anything... <a href="">Read More</a></p>
         </div>
     </section>
@@ -200,36 +203,96 @@
     <!--Instagram=============-->
     <section class="instagram">
         <a href="">
-            <img src="" alt=""> 
+            <img src="" alt="">
             <span>ashasuperfoods</span>
         </a>
         <div class="instagram-picture">
             <div class="picture-item">
-                <img src="" alt=""> 
-                <img src="" alt=""> 
+                <img src="" alt="">
+                <img src="" alt="">
             </div>
             <div class="picture-item">
-                <img src="" alt=""> 
-                <img src="" alt=""> 
+                <img src="" alt="">
+                <img src="" alt="">
             </div>
             <div class="picture-item">
-                <img src="" alt=""> 
-                <img src="" alt=""> 
+                <img src="" alt="">
+                <img src="" alt="">
             </div>
             <div class="picture-item">
-                <img src="" alt=""> 
-                <img src="" alt=""> 
+                <img src="" alt="">
+                <img src="" alt="">
             </div>
             <div class="picture-item">
-                <img src="" alt=""> 
-                <img src="" alt=""> 
+                <img src="" alt="">
+                <img src="" alt="">
             </div>
         </div>
     </section>
 
     <!--Footer=============-->
     <footer class="footer">
+        <div class="footer-content">
+            <div class="content-logo">
+                <a href="">
+                    <img src="" alt="">
+                </a>
 
+            </div>
+            <div class="information">
+                <p><strong>Information</strong></p>
+                <ul>
+                    <li><a href="">Search</a></li>
+                    <li><a href="">Contact us</a></li>
+                    <li><a href="">Terms & Conditions</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="payment">
+                <p><strong>Payment</strong></p>
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+            <div class="subscribe">
+                <p><strong>Don’t miss out!</strong></p>
+                <div class="subscribe-email">
+                    <input type="email" name="myemail" placeholder="Subscribe to our newsletter">
+                    <img src="" alt="">
+                </div>
+                <div class="subscribe-social">
+                    <img src="" alt="">
+                    <p>Follow Us</p>
+                    <div class="social">
+                        <ul>
+                            <li>
+                                <a href=""><img src="" alt=""></a>
+                            </li>
+                            <li>
+                                <a href=""><img src="" alt=""></a>
+                            </li>
+                            <li>
+                                <a href=""><img src="" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>&copy; 2020. All Rights Reserved.</p>
+            <div class="gp-top">
+                <p>Go top</p>
+                <button><img src="" alt=""></button>
+            </div>
+        </div>
     </footer>
 
 </body>
