--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
             </div>
         </div>
         <div class="header-content">
-            <button>Shop now</button>
+            <button>Shop now<img src="" alt=""></button>
         </div>
     </header>
 
     <!--Smoothies==============-->
     <section class="smoothies">
         <h2>What are the smoothies?</h2>
-        <div class="text">A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products
-            (milk, yogurt,<br>
+        <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products
+            (milk, yogurt,
             ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients,
-            such<br>
+            such
             as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant
-            milk, nuts,<br>
+            milk, nuts,
             nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
-        </div>
+        </p>
         <div class="features">
             <div class="features-item"><img src="" alt=""><span>Plant Based</span></div>
             <div class="features-item"><img src="" alt=""><span>Vegan</span></div>
@@ -86,9 +86,7 @@
 
     <!--About=============-->
     <section class="about">
-        <div class="about-picture">
-            <img src="" alt="">
-        </div>
+        <img src="" alt="">
         <div class="about-text">
             <h2>What make Smoothies an <span>awesome drink?</span></h2>
             <ul>
@@ -101,42 +99,38 @@
                 <li><span>Gluten-Free & Grain-Free</span></li>
                 <li><span>Corn-Free & Soy-Free</span></li>
             </ul>
-            <button>About Organic Smoothie</button>
+            <button>About Organic Smoothie<img src="" alt=""></button>
         </div>
     </section>
 
     <!--Product=============-->
     <section class="product">
-        <div class="product-dark-chocolate">
+        <div class="product-item">
             <img src="" alt="">
-            <div>Dark Chocolate Smoothie<br>
-                <span>100 ml</span>
-            </div>
-            <button>Buy</button>
+            <h4>Dark Chocolate Smoothie</h4>
+            <span>100 ml</span>
+            <button>Buy<img src="" alt=""></button>
         </div>
 
-        <div class="product-vegan-lettuce">
+        <div class="product-item">
             <img src="" alt="">
-            <div>Vegan Lettuce Smoothie<br>
-                <span>100 ml</span>
-            </div>
-            <button>Buy</button>
+            <h4>Vegan Lettuce Smoothie</h4>
+            <span>100 ml</span>
+            <button>Buy<img src="" alt=""></button>
         </div>
 
-        <div class="product-lemon-ginger">
+        <div class="product-item">
             <img src="" alt="">
-            <div>Lemon Ginger Smoothie<br>
-                <span>100 ml</span>
-            </div>
-            <button>Buy</button>
+            <h4>Lemon Ginger Smoothie</h4>
+            <span>100 ml</span>
+            <button>Buy<img src="" alt=""></button>
         </div>
 
-        <div class="product-turmeric-garlic">
+        <div class="product-item">
             <img src="" alt="">
-            <div>Turmeric Garlic Smoothie<br>
-                <span>100 ml</span>
-            </div>
-            <button>Buy</button>
+            <h4>Turmeric Garlic Smoothie</h4>
+            <span>100 ml</span>
+            <button>Buy<img src="" alt=""></button>
         </div>
 
     </section>
@@ -146,15 +140,14 @@
         <div class="story-text">
             <h2>Our story</h2>
             <p>
-                As products typically using raw fruits or vegetables,<br>
-                smoothies include dietary fiber (e.g. pulp, skin, and seeds) and<br>
-                so are thicker than fruit juice, often with a consistency similar<br>
+                As products typically using raw fruits or vegetables,
+                smoothies include dietary fiber (e.g. pulp, skin, and seeds) and
+                so are thicker than fruit juice, often with a consistency similar
                 to a milkshake.
             </p>
-            <button>Who we are</button>
+            <button>Who we are<img src="" alt=""></button>
         </div>
         <div class="story-picture">
-            <img src="" alt="">
             <img src="" alt="">
         </div>
     </section>
@@ -163,18 +156,12 @@
     <section class="testimonials">
         <h2>Why clients LOVE us?</h2>
         <div class="testimonials-article">
-            <div class="article-background">
-                <p>Sarah A</p>
-            </div>
             <div class="article-text">
-                <p>”Smoothie is great. I don't know what else to say. I wil<br>
-                    let my mum know about this, she could really make use<br>
-                    of Smoothie! Smoothie saved my business.”<br>
-                    <span>- from Santa Monica, CA</span></p>
+                <q>Smoothie is great. I don't know what else to say. I wil
+                    let my mum know about this, she could really make use
+                    of Smoothie! Smoothie saved my business.</q>
+                <cite>- from Santa Monica, CA</cite>
             </div>
-            <img src="" alt="">
-        </div>
-        <div class="testimonials-picture">
             <img src="" alt="">
         </div>
         <div class="testimonials-navigation">
@@ -186,106 +173,103 @@
     <!--Blog=============-->
     <section class="blog">
         <h2>Our blog</h2>
-        <div class="blog-picture">
+        <div>
             <img src="" alt="">
+            <article>
+                <h3>ASAFOETIDA - THE NEXT TURMERIC?</h3>
+                <time>Jun 16, 2020</time>
+                <p>If the fruit ingredients and the green vegetable
+                    ingredients are both juiced ahead of time, the mixed juice
+                    doesn't even have to be blended like a smoothie, i.e. a
+                    green juice or anything... <a href="">Read More</a><img src="" alt=""></p>
+            </article>
         </div>
-        <div class="blog-content">
-            <hr>
-            <h3>ASAFOETIDA - THE NEXT TURMERIC?</h3>
-            <span>Jun 16, 2020</span>
-            <p>If the fruit ingredients and the green vegetable<br>
-                ingredients are both juiced ahead of time, the mixed juice<br>
-                doesn't even have to be blended like a smoothie, i.e. a<br>
-                green juice or anything... <a href="">Read More</a></p>
-        </div>
-    </section>
 
-    <!--Instagram=============-->
-    <section class="instagram">
-        <a href="">
-            <img src="" alt="">
-            <span>ashasuperfoods</span>
-        </a>
-        <div class="instagram-picture">
-            <div class="picture-item">
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
-            <div class="picture-item">
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
-            <div class="picture-item">
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
-            <div class="picture-item">
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
-            <div class="picture-item">
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
-        </div>
-    </section>
 
-    <!--Footer=============-->
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="content-logo">
-                <a href="">
+        <!--Instagram=============-->
+        <section class="instagram">
+            <a href=""><img src="" alt="">ashasuperfoods</a>
+            <div class="instagram-picture">
+                <div class="picture-item">
                     <img src="" alt="">
-                </a>
-
-            </div>
-            <div class="information">
-                <p><strong>Information</strong></p>
-                <ul>
-                    <li><a href="">Search</a></li>
-                    <li><a href="">Contact us</a></li>
-                    <li><a href="">Terms & Conditions</a></li>
-                    <li><a href="">Privacy Policy</a></li>
-                </ul>
-            </div>
-            <div class="payment">
-                <p><strong>Payment</strong></p>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
-            <div class="subscribe">
-                <p><strong>Don’t miss out!</strong></p>
-                <div class="subscribe-email">
-                    <input type="email" name="myemail" placeholder="Subscribe to our newsletter">
                     <img src="" alt="">
                 </div>
-                <div class="subscribe-social">
+                <div class="picture-item">
                     <img src="" alt="">
-                    <p>Follow Us</p>
-                    <div class="social">
-                                <a href=""><img src="" alt=""></a>
-                                <a href=""><img src="" alt=""></a>
-                                <a href=""><img src="" alt=""></a>
+                    <img src="" alt="">
+                </div>
+                <div class="picture-item">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+                <div class="picture-item">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+                <div class="picture-item">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!--Footer=============-->
+        <footer class="footer">
+            <div class="footer-content">
+                <div class="content-logo">
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                </div>
+
+                <div class="information">
+                    <h4>Information</h4>
+                    <ul>
+                        <li><a href="">Search</a></li>
+                        <li><a href="">Contact us</a></li>
+                        <li><a href="">Terms & Conditions</a></li>
+                        <li><a href="">Privacy Policy</a></li>
+                    </ul>
+                </div>
+
+                <div class="payment">
+                    <h4>Payment</h4>
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+
+                <div class="subscribe">
+                    <h4>Don’t miss out!</h4>
+                    <div class="subscribe-email">
+                        <input type="email" name="myemail" placeholder="Subscribe to our newsletter">
+                    </div>
+                    <div class="subscribe-social">
+                        <span>Follow Us</span>
+                        <div class="social">
+                            <a href=""><img src="" alt=""></a>
+                            <a href=""><img src="" alt=""></a>
+                            <a href=""><img src="" alt=""></a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="footer-bottom">
-            <p>&copy; 2020. All Rights Reserved.</p>
-            <div class="gp-top">
-                <p>Go top</p>
-                <button><img src="" alt=""></button>
+
+            <div class="footer-bottom">
+                <span>&copy; 2020. All Rights Reserved.</span>
+                <div class="go-top">
+                    <span>Go top</span>
+                    <button><img src="" alt=""></button>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
 </body>
 
 </html>
