--- a/index.html
+++ b/index.html
@@ -73,14 +73,38 @@
             nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
         </p>
         <div class="features">
-            <div class="features-item"><img src="" alt=""><span>Plant Based</span></div>
-            <div class="features-item"><img src="" alt=""><span>Vegan</span></div>
-            <div class="features-item"><img src="" alt=""><span>Paleo</span></div>
-            <div class="features-item"><img src="" alt=""><span>Gluten-Free</span></div>
-            <div class="features-item"><img src="" alt=""><span>Corn-Free</span></div>
-            <div class="features-item"><img src="" alt=""><span>Soy-Free</span></div>
-            <div class="features-item"><img src="" alt=""><span>Ayurvedic</span></div>
-            <div class="features-item"><img src="" alt=""><span>Made With Love</span></div>
+            <div class="features-item">
+                <img src="" alt="">
+                <span>Plant Based</span>
+            </div>
+            <div class="features-item">
+                <img src="" alt="">
+                <span>Vegan</span>
+            </div>
+            <div class="features-item">
+                <img src="" alt="">
+                <span>Paleo</span>
+            </div>
+            <div class="features-item">
+                <img src="" alt="">
+                <span>Gluten-Free</span>
+            </div>
+            <div class="features-item">
+                <img src="" alt="">
+                <span>Corn-Free</span>
+            </div>
+            <div class="features-item">
+                <img src="" alt="">
+                <span>Soy-Free</span>
+            </div>
+            <div class="features-item">
+                <img src="" alt="">
+                <span>Ayurvedic</span>
+            </div>
+            <div class="features-item">
+                <img src="" alt="">
+                <span>Made With Love</span>
+            </div>
         </div>
     </section>
 
