--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
                     <li class="menu__item">
                         <a class="menu__link" href="">Shop</a>
                     </li>
-                    <li>
+                    <li class="menu__item">
                         <a class="menu__link"  href="">Home</a>
                     </li>
-                    <li>
+                    <li class="menu__item">
                         <a class="menu__link"  href="">Story</a>
                     </li>
-                    <li>
+                    <li class="menu__item">
                         <a class="menu__link"  href="">About</a>
                     </li>
-                    <li>
+                    <li class="menu__item">
                         <a class="menu__link"  href="">Blog</a>
                     </li>
-                    <li>
+                    <li class="menu__item">
                         <a class="menu__link"  href="">Testimonials</a>
                     </li>
                 </ul>
