--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
     <!--Smoothies==============-->
     <section class="smoothies">
-        <h2>What are the smoothies?</h2>
-        <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products
+        <h2 class="smoothies__heading heading heading--orange">What are the smoothies?</h2>
+        <p class="smoothies__text text text--black">A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products
             (milk, yogurt,
             ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients,
             such
@@ -99,37 +99,38 @@
             milk, nuts,
             nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
         </p>
-        <div class="features">
-            <div class="features-item">
-                <img src="" alt="">
-                <span>Plant Based</span>
+        <div class="smoothies__features features">
+            <div class="features__item">
+                <img class="features__img" src="" alt="">
+                <span class="features__desc">Plant Based</span>
+            </div>
+            <div class="features__item">
+                <img class="features__img" src="" alt="">
+                <span class="features__desc">Vegan</span>
             </div>
             <div class="features-item">
-                <img src="" alt="">
-                <span>Vegan</span>
+                <img class="features__img" src="" alt="">
+                <span class="features__desc">Paleo</span>
             </div>
             <div class="features-item">
-                <img src="" alt="">
-                <span>Paleo</span>
+                <img class="features__img" src="" alt="">
+                <span class="features__desc">Gluten-Free</span>
             </div>
             <div class="features-item">
-                <img src="" alt="">
-                <span>Gluten-Free</span>
+                <img class="features__img" src="" alt="">
+                <span class="features__desc">Corn-Free</span>
             </div>
             <div class="features-item">
-                <img src="" alt="">
-                <span>Corn-Free</span>
+                <img class="features__img" src="" alt="">
+                <span class="features__desc">Soy-Free</span>
             </div>
             <div class="features-item">
-                <img src="" alt="">
-                <span>Soy-Free</span>
+                <img class="features__img" src="" alt="">
+                <span class="features__desc">Ayurvedic</span>
             </div>
             <div class="features-item">
-                <img src="" alt="">
-                <span>Ayurvedic</span>
-            </div>
-            <div class="features-item"><img src="" alt="">
-                <span>Made With Love</span>
+                <img class="features__img" src="" alt="">
+                <span class="features__desc">Made With Love</span>
             </div>
         </div>
     </section>
