--- a/index.html
+++ b/index.html
@@ -137,20 +137,37 @@
 
     <!--About=============-->
     <section class="about">
-        <img src="" alt="">
-        <div class="about-text">
-            <h2>What make Smoothies an <span>awesome drink?</span></h2>
-            <ul>
-                <li><span>Crunchy</span> Puffs Texture</li>
-                <li><span>100 Calories</span> per drink</li>
-                <li>4g Plant Protein</li>
-                <li>Good source of <span>Magnesium & Vitamin B6</span></li>
-                <li><span>No Sugar</span> in our Savory Flavors</li>
-                <li><span>Non-GMO, Vegan & Paleo</span></li>
-                <li><span>Gluten-Free & Grain-Free</span></li>
-                <li><span>Corn-Free & Soy-Free</span></li>
+        <img class="about__img" src="" alt=""> 
+        <div class="about__desc desc">
+            <h2 class="desc__heading heading heading--white">What make Smoothies an 
+                <span class="desc__heading heading heading--green">awesome drink?</span></h2>
+            <ul class="desc__list">
+                <li class="desc__item">
+                    <span class="desc__item--extra-bold">Crunchy</span> Puffs Texture
+                </li>
+                <li class="desc__item">
+                    <span class="desc__item--extra-bold">100 Calories</span> per drink
+                </li>
+                <li class="desc__item">4g Plant Protein</li>
+                <li class="desc__item">Good source of 
+                    <span class="desc__item--extra-bold">Magnesium & Vitamin B6</span>
+                </li>
+                <li class="desc__item">
+                    <span class="desc__item--extra-bold">No Sugar</span> in our Savory Flavors
+                </li>
+                <li class="desc__item">
+                    <span class="desc__item--extra-bold">Non-GMO, Vegan & Paleo</span>
+                </li>
+                <li class="desc__item">
+                    <span class="desc__item--extra-bold">Gluten-Free & Grain-Free</span>
+                </li>
+                <li class="desc__item">
+                    <span class="desc__item--extra-bold">Corn-Free & Soy-Free</span>
+                </li>
             </ul>
-            <button>About Organic Smoothie<img src="" alt=""></button>
+            <button class="about__btn btn btn--border-orange">About Organic Smoothie
+                <img class="btn__arrow-yellow" src="" alt="">
+            </button>
         </div>
     </section>
 
