--- a/index.html
+++ b/index.html
@@ -173,32 +173,40 @@
 
     <!--Product=============-->
     <section class="product">
-        <div class="product-item">
-            <img src="" alt="">
-            <h4>Dark Chocolate Smoothie</h4>
-            <span>100 ml</span>
-            <button>Buy<img src="" alt=""></button>
+        <div class="product__item">
+            <img class="product_img" src="" alt="">
+            <h4 class="product__name">Dark Chocolate Smoothie</h4>
+            <span class="produkt__capacity">100 ml</span>
+            <button class="about__btn btn btn--border-white">Buy
+                <img class="btn__arrow-white" src="" alt="">
+            </button>
+        </div>
+
+        <div class="product__item">
+            <img class="product_img" src="" alt="">
+            <h4 class="product__name">Vegan Lettuce Smoothie</h4>
+            <span class="produkt__capacity">100 ml</span>
+            <button class="about__btn btn btn--border-white">Buy
+                <img class="btn__arrow-white" src="" alt="">
+            </button>
         </div>
 
         <div class="product-item">
-            <img src="" alt="">
-            <h4>Vegan Lettuce Smoothie</h4>
-            <span>100 ml</span>
-            <button>Buy<img src="" alt=""></button>
+            <img class="product_img" src="" alt="">
+            <h4 class="product__name">Lemon Ginger Smoothie</h4>
+            <span class="produkt__capacity">100 ml</span>
+            <button class="about__btn btn btn--border-white">Buy
+                <img class="btn__arrow-white" src="" alt="">
+            </button>
         </div>
 
         <div class="product-item">
-            <img src="" alt="">
-            <h4>Lemon Ginger Smoothie</h4>
-            <span>100 ml</span>
-            <button>Buy<img src="" alt=""></button>
-        </div>
-
-        <div class="product-item">
-            <img src="" alt="">
-            <h4>Turmeric Garlic Smoothie</h4>
-            <span>100 ml</span>
-            <button>Buy<img src="" alt=""></button>
+            <img class="product_img" src="" alt="">
+            <h4 class="product__name">Turmeric Garlic Smoothie</h4>
+            <span class="produkt__capacity">100 ml</span>
+            <button class="about__btn btn btn--border-white">Buy
+                <img class="btn__arrow-white" src="" alt="">
+            </button>
         </div>
 
     </section>
